fix(css): Adjust spacing of tablet UI elements

--- a/css/main.scss
+++ b/css/main.scss
@@ -318,7 +318,6 @@ nav {
         height: auto;
         margin: auto;
         border-radius: 14px;
-        box-shadow: 0px -2px 27px $shadow-color-2;
         box-shadow: 0px -2px 7px $shadow-color;
     }
     button { font-size: 16px }
@@ -383,15 +382,24 @@ footer {
 
 @media (min-width: 768px) {
     
+    $padding: 40px;
+    section {
+        padding: $padding;
+    }
     #hero-section {
+        gap: 60px;
+        .main-intro {
+            gap: 32px;
+        }
         .image-container {
-            max-width: 700px;
+            max-width: 750px;
             margin: auto;
         }
     }
+    .partners { padding: $padding }
 
     #features {
-
+        padding: $padding;
         .header-group {
             position: relative;
             max-width: 470px;
@@ -405,6 +413,16 @@ footer {
             .code-image {
                 max-width: 600px;
             }
+        }
+    }
+    #call-to-action {
+        padding: 60px $padding;
+    }
+
+    footer {
+        padding: {
+            left: $padding;
+            right: $padding;
         }
     }
 }
